--- a/Prevu.Synoptics.V3168_Sirplaste/AirView.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/AirView.xaml
@@ -173,8 +173,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:EC_Filtro Height="174" Canvas.Left="912" Canvas.Top="152" Width="162" HorizontalAlignment="Left" VerticalAlignment="Center" />
-        <Labels:DetailsLabel ComponentName="970-FILTER" DetailsPageName="D970" Canvas.Left="1068" Canvas.Top="276" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:DetailsLabel ComponentName="970-FILTER" DetailsPageName="D970" Canvas.Left="1063" Canvas.Top="273" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Labels:JumpLabel Canvas.Left="577" Canvas.Top="60" HorizontalAlignment="Left" VerticalAlignment="Center" JumpFromLabel="810-01-MA1" JumpToLabel="810-01-MA1"/>
         <Labels:JumpLabel 
             JumpToLabel="FKS-71-ECS1" Canvas.Left="577" Canvas.Top="241" JumpFromLabel="FKS-71-ECS1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
@@ -186,6 +185,7 @@
             JumpToLabel="898-01-MA1" Canvas.Left="577" Canvas.Top="423" JumpFromLabel="898-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:JumpLabel 
             JumpToLabel="908-01-MA1" Canvas.Left="577" Canvas.Top="514" JumpFromLabel="908-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_EC_FiltroManiche Canvas.Left="904" Canvas.Top="149" Height="237" Width="159"/>
     </Canvas>
 
 </UserControl>
