--- a/Prevu.Synoptics.V3168_Sirplaste/D371.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/D371.xaml
@@ -65,6 +65,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
+        <Machines:V01_ACS_Chemical_Dosing Canvas.Left="133" Canvas.Top="229" Height="130" Width="144" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:CV_Valve_001 Height="100" Width="102" Color="Water" RenderTransformOrigin="0.51,0.539" HorizontalAlignment="Left" Canvas.Left="282" Canvas.Top="80" VerticalAlignment="Center">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
@@ -75,7 +76,6 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:Chemical_dosing Height="130" Width="144" HorizontalAlignment="Left" Canvas.Left="133" Canvas.Top="229" VerticalAlignment="Center"/>
         <Machines:WaterPump Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Chemicals" HorizontalAlignment="Center" Canvas.Left="137" Canvas.Top="66" VerticalAlignment="Top">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
