--- a/Prevu.Synoptics.V3168_Sirplaste/OverallView.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/OverallView.xaml
@@ -37,7 +37,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Width="217" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="220-01-MA1" Canvas.Left="2784" Canvas.Top="973" PipeHeight="Medium" VisibilityComponent="220-24-CV1" VisibilitySignal="LS1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="65" RenderTransformOrigin="0.5,0.5" Height="17" StatusComponent="377-01-MA1" Canvas.Left="7238" Canvas.Top="2796" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="377-23-CV1"/>
+        <Labels:Pipe Color="Water" Width="65" RenderTransformOrigin="0.5,0.5" Height="17" StatusComponent="377-01-MA1" Canvas.Left="7238" Canvas.Top="2793" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="377-23-CV1"/>
         <Labels:Pipe Color="Water" Width="58" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="291-01-MA1" Canvas.Left="1497" Canvas.Top="757" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -103,7 +103,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="146" RenderTransformOrigin="0.5,0.5"  StatusComponent="236-01-MA1" Canvas.Left="2664" Canvas.Top="1613" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="144" RenderTransformOrigin="0.5,0.5"  StatusComponent="236-01-MA1" Canvas.Left="2665" Canvas.Top="1614" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -113,7 +113,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="150" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="236-01-MA1" Canvas.Left="2735" Canvas.Top="1536" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Labels:Pipe Color="Water" Width="179" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="236-01-MA1" Canvas.Left="2735" Canvas.Top="1537" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Color="Water" Width="1635" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="236-01-MA1" Canvas.Left="2735" Canvas.Top="1677" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="83" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="236-01-MA1" Canvas.Left="4397" Canvas.Top="1676" HorizontalAlignment="Center" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
@@ -137,7 +137,7 @@
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="403" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="236-01-MA1" Canvas.Left="4476" Canvas.Top="663" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Color="Water" Width="2835" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="377-01-MA1" Canvas.Left="4539" Canvas.Top="1080" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="377-23-CV1"/>
-        <Labels:Pipe Color="Water" Width="1720" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="377-01-MA1" Canvas.Left="6512" Canvas.Top="1938" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="377-23-CV1">
+        <Labels:Pipe Color="Water" Width="1716" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="377-01-MA1" Canvas.Left="6514" Canvas.Top="1936" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="377-23-CV1">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -168,8 +168,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="356" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="377-01-MA1" Canvas.Left="4539" Canvas.Top="585" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="377-23-CV1"/>
-        <Labels:Pipe Width="103" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="382-01-MA1" Canvas.Left="7218" Canvas.Top="2439" HorizontalAlignment="Left" VerticalAlignment="Center" PipeHeight="Medium"/>
-        <Labels:Pipe Color="Water" Width="44" RenderTransformOrigin="0.5,0.5" Height="17" StatusComponent="377-01-MA1" Canvas.Left="7330" Canvas.Top="2796" HorizontalAlignment="Left" VerticalAlignment="Center" VisibilityComponent="377-23-CV1"/>
+        <Labels:Pipe Width="103" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="382-01-MA1" Canvas.Left="7218" Canvas.Top="2436" HorizontalAlignment="Center" VerticalAlignment="Top" PipeHeight="Medium"/>
+        <Labels:Pipe Color="Water" Width="44" RenderTransformOrigin="0.5,0.5" Height="17" StatusComponent="377-01-MA1" Canvas.Left="7330" Canvas.Top="2793" HorizontalAlignment="Center" VerticalAlignment="Top" VisibilityComponent="377-23-CV1"/>
         <Labels:Pipe Width="716" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="382-01-MA1" Canvas.Left="6958" Canvas.Top="2792" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -246,7 +246,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="2591" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="457-01-MA1" Canvas.Left="1779" Canvas.Top="1707" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="544" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="457-01-MA1" Canvas.Left="1509" Canvas.Top="2363" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="538" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="457-01-MA1" Canvas.Left="1512" Canvas.Top="2360" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -277,8 +277,8 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe Color="Water" Width="553" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="457-01-MA1" Canvas.Left="1230" Canvas.Top="2894" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="507" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="868-01-MA1" Canvas.Left="3279" Canvas.Top="3438" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="522" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="868-01-MA1" Canvas.Left="3520" Canvas.Top="3179" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="518" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="868-01-MA1" Canvas.Left="3268" Canvas.Top="3440" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Width="534" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="868-01-MA1" Canvas.Left="3514" Canvas.Top="3173" PipeHeight="Medium" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -288,7 +288,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="627" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="868-01-MA1" Canvas.Left="3776" Canvas.Top="2922" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Width="627" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="868-01-MA1" Canvas.Left="3776" Canvas.Top="2910" PipeHeight="Medium" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="1018" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="373-01-MA1" Canvas.Left="4855" Canvas.Top="2563" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Color="Water" Width="680" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="373-01-MA1" Canvas.Left="4516" Canvas.Top="2225" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
@@ -300,8 +300,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Color="Water" Width="171" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="373-01-MA1" Canvas.Left="5869" Canvas.Top="2785" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Color="Water" Width="226" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="373-01-MA1" Canvas.Left="5758" Canvas.Top="2674" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Color="Water" Width="171" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="373-01-MA1" Canvas.Left="5869" Canvas.Top="2782" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:Pipe Color="Water" Width="222" RenderTransformOrigin="0.5,0.5" Height="18" StatusComponent="373-01-MA1" Canvas.Left="5760" Canvas.Top="2672" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -379,10 +379,10 @@
         <local:P230 Canvas.Left="2673" Canvas.Top="873" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P288 Canvas.Left="4701" Canvas.Top="270" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
         <local:P330 Canvas.Left="4473" Canvas.Top="1652" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
-        <local:P350 Canvas.Left="5803" Canvas.Top="2290" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <local:P350 Canvas.Left="5803" Canvas.Top="2287" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P430 Canvas.Left="200" Canvas.Top="2186" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P530 Canvas.Left="1248" Canvas.Top="2285" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
-        <local:P810 Canvas.Left="2244" Canvas.Top="2683" HorizontalAlignment="Left" VerticalAlignment="Top" d:IsLocked="True"/>
+        <local:P530 Canvas.Left="1233" Canvas.Top="2286" HorizontalAlignment="Left" VerticalAlignment="Center" d:IsLocked="True"/>
+        <local:P810 Canvas.Left="2227" Canvas.Top="2685" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <local:P997 Canvas.Left="3926" Canvas.Top="2854" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
     </Canvas>
 </UserControl>
