--- a/Prevu.Synoptics.V3168_Sirplaste/P230.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P230.xaml
@@ -43,7 +43,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="174" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="232-21-CV1" Canvas.Left="530" Canvas.Top="470" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="174" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="232-21-CV1" Canvas.Left="530" Canvas.Top="458" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -93,7 +93,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="137" RenderTransformOrigin="0.5,0.5" Height="15" StatusComponent="232-01-MA1" Canvas.Left="348" Canvas.Top="598" >
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="137" RenderTransformOrigin="0.5,0.5" Height="15" StatusComponent="232-01-MA1" Canvas.Left="372" Canvas.Top="598" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -103,7 +103,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="140" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="540" Canvas.Top="626" >
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="156" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="532" Canvas.Top="618" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -113,7 +113,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="150" RenderTransformOrigin="0.5,0.5" StatusComponent="230-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="344" Canvas.Top="399" >
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="150" RenderTransformOrigin="0.5,0.5" StatusComponent="230-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="340" Canvas.Top="399" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -133,7 +133,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="140" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="236-01-MA1" Canvas.Left="241" Canvas.Top="664" >
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="140" RenderTransformOrigin="0.5,0.5" Height="16" StatusComponent="236-01-MA1" Canvas.Left="265" Canvas.Top="664" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform />
@@ -143,7 +143,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="74" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="540" Canvas.Top="560" HorizontalAlignment="Left" VerticalAlignment="Center" >
+        <Labels:Pipe Width="74" RenderTransformOrigin="0.5,0.5" StatusComponent="232-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="540" Canvas.Top="545" HorizontalAlignment="Center" VerticalAlignment="Top" >
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -153,98 +153,6 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Machines:GR_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="241" Width="210" Canvas.Left="310" Canvas.Top="165" />
-        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" VerticalAlignment="Center" Height="160" Width="128" RenderTransformOrigin="0.5,0.5" Canvas.Left="415" Canvas.Top="435" >
-            <Machines:DCE_DryingCentrifuge.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DCE_DryingCentrifuge.RenderTransform>
-        </Machines:DCE_DryingCentrifuge>
-        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="51" Width="53" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="678" Canvas.Top="322" >
-            <Machines:CV_Valve_001.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="270"/>
-                    <TranslateTransform />
-                </TransformGroup>
-            </Machines:CV_Valve_001.RenderTransform>
-        </Machines:CV_Valve_001>
-        <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="38" Width="50" Canvas.Left="183" Canvas.Top="214"/>
-        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="603" Canvas.Top="701" Width="166" />
-        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" VerticalAlignment="Center" Height="160" Width="128" RenderTransformOrigin="0.5,0.5" Canvas.Left="734" Canvas.Top="568" >
-            <Machines:DCE_DryingCentrifuge.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DCE_DryingCentrifuge.RenderTransform>
-        </Machines:DCE_DryingCentrifuge>
-        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left"  VerticalAlignment="Center" Height="77" Width="101" Canvas.Left="336" Canvas.Top="633"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="910" Canvas.Top="554" Width="58" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-
-        <Machines:WaterPump HorizontalAlignment="Left"  VerticalAlignment="Center" Height="54" Width="49" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="362" Canvas.Top="645">
-            <Machines:WaterPump.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:WaterPump.RenderTransform>
-        </Machines:WaterPump>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="236-01-MA1" Canvas.Left="341" Canvas.Top="715" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="233-01-MA1" Canvas.Left="504" Canvas.Top="686" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="234-01-MA1" Canvas.Left="738" Canvas.Top="511" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="232-01-MA1" Canvas.Left="530" Canvas.Top="394" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="230-01-MA1" Canvas.Left="370" Canvas.Top="207"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="230-21-CV1" Canvas.Left="161" Canvas.Top="164"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-		VerticalAlignment="Center" 
-		ComponentName="230-02-MA1" Canvas.Left="244" Canvas.Top="335" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="232-21-CV1" Canvas.Left="724" Canvas.Top="322" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-		VerticalAlignment="Center" 
-		ComponentName="230-01-YA1" Canvas.Left="244" Canvas.Top="272" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="237-01-MA1" Canvas.Left="894" Canvas.Top="497" />
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            JumpFromLabel="230-01-MA1" 
-            JumpToLabel="220-24-CV1" Canvas.Left="232" Canvas.Top="74"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            JumpFromLabel="236-01-MA1" 
-            JumpToLabel="225-41-LT1"  Direction="Left" Canvas.Left="194" Canvas.Top="638"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            JumpFromLabel="230-21-CV1" 
-            JumpToLabel="291-01-MA1" Canvas.Left="56" Canvas.Top="198"/>
-
-
-
-
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="201" RenderTransformOrigin="0.5,0.5" StatusComponent="237-01-MA1" PipeHeight="Medium" Height="10" Canvas.Left="1015" Canvas.Top="77">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -375,6 +283,33 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
+        <Labels:Pipe Width="510" RenderTransformOrigin="0.5,0.5" StatusComponent="237-01-MA1" PipeHeight="Medium" Canvas.Left="765" Canvas.Top="327" HorizontalAlignment="Left" VerticalAlignment="Center" >
+            <Labels:Pipe.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="90"/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </Labels:Pipe.RenderTransform>
+        </Labels:Pipe>
+        <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="51" Width="53" Color="Water" RenderTransformOrigin="0.51,0.539" Canvas.Left="678" Canvas.Top="322" >
+            <Machines:CV_Valve_001.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform/>
+                    <SkewTransform/>
+                    <RotateTransform Angle="270"/>
+                    <TranslateTransform />
+                </TransformGroup>
+            </Machines:CV_Valve_001.RenderTransform>
+        </Machines:CV_Valve_001>
+        <Machines:CV_Valve HorizontalAlignment="Left" VerticalAlignment="Center" Height="38" Width="50" Canvas.Left="183" Canvas.Top="214"/>
+        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="603" Canvas.Top="701" Width="166" />
+        <Machines:VRC_WaterCollectingTank HorizontalAlignment="Left"  VerticalAlignment="Center" Height="77" Width="101" Canvas.Left="360" Canvas.Top="633"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="910" Canvas.Top="554" Width="58" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1294" Canvas.Top="273" HorizontalAlignment="Left" VerticalAlignment="Center" Width="50" Height="50" />
+        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1080" Canvas.Top="665" Width="58" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_MU_Grinder Canvas.Left="310" Canvas.Top="165" Height="241" Width="210" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Height="100" Width="100" Color="Air" RenderTransformOrigin="0.51,0.539" Canvas.Left="1040" Canvas.Top="153">
             <Machines:CV_Valve_001.RenderTransform>
                 <TransformGroup>
@@ -395,33 +330,79 @@
                 </TransformGroup>
             </Machines:Waste.RenderTransform>
         </Machines:Waste>
-        <Machines:VS_Airlock HorizontalAlignment="Left" VerticalAlignment="Center" Height="61" Width="64" Canvas.Left="1288" Canvas.Top="336" />
-        <Machines:DV_Diverter_T HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5"  Height="80" Canvas.Left="1161" Canvas.Top="643">
-            <Machines:DV_Diverter_T.RenderTransform>
+        <Machines:V01_SA_Elutriator Canvas.Left="1175" Canvas.Top="270" HorizontalAlignment="Center" Height="209" VerticalAlignment="Top" Width="81"/>
+        <Machines:V01_DCE_Centrifuge Canvas.Left="734" Canvas.Top="568" Height="160" Width="128" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+
+        <Machines:WaterPump HorizontalAlignment="Left"  VerticalAlignment="Center" Height="54" Width="49" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="386" Canvas.Top="645">
+            <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
                     <SkewTransform/>
                     <RotateTransform Angle="180"/>
                     <TranslateTransform/>
                 </TransformGroup>
-            </Machines:DV_Diverter_T.RenderTransform>
-        </Machines:DV_Diverter_T>
-        <Machines:VS_Airlock HorizontalAlignment="Left" VerticalAlignment="Center" Height="61" Width="64" Canvas.Left="1179" Canvas.Top="583" />
-        <Separation:SA_Elutriator Width="81" Canvas.Left="1175" Canvas.Top="270" Height="209" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:VS_Airlock HorizontalAlignment="Left" VerticalAlignment="Center" Height="61" Width="64" Canvas.Left="1179" Canvas.Top="174"/>
+            </Machines:WaterPump.RenderTransform>
+        </Machines:WaterPump>
+        <Machines:V01_ScarpaTrasporto Canvas.Left="1182" Canvas.Top="664" Height="40" Width="67" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_WCE_Centrifuge Canvas.Left="397" Canvas.Top="419" Height="153" Width="158" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_VS_Airlock Canvas.Left="1179" Canvas.Top="174" Height="61" Width="64" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VS_Airlock Canvas.Left="1288" Canvas.Top="336" Height="61" Width="64" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VS_Airlock Canvas.Left="1179" Canvas.Top="583" Height="61" Width="64" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="236-01-MA1" Canvas.Left="365" Canvas.Top="715" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Top" 
+            ComponentName="233-01-MA1" Canvas.Left="561" Canvas.Top="730" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="234-01-MA1" Canvas.Left="738" Canvas.Top="511" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="232-01-MA1" Canvas.Left="530" Canvas.Top="394" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="230-01-MA1" Canvas.Left="370" Canvas.Top="207"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="230-21-CV1" Canvas.Left="161" Canvas.Top="164"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+		VerticalAlignment="Center" 
+		ComponentName="230-02-MA1" Canvas.Left="244" Canvas.Top="335" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="232-21-CV1" Canvas.Left="724" Canvas.Top="322" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+		VerticalAlignment="Center" 
+		ComponentName="230-01-YA1" Canvas.Left="244" Canvas.Top="272" />
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="237-01-MA1" Canvas.Left="894" Canvas.Top="497" />
+        <Labels:JumpLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            JumpFromLabel="230-01-MA1" 
+            JumpToLabel="220-24-CV1" Canvas.Left="232" Canvas.Top="74"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            JumpFromLabel="236-01-MA1" 
+            JumpToLabel="225-41-LT1"  Direction="Left" Canvas.Left="218" Canvas.Top="638"/>
+        <Labels:JumpLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            JumpFromLabel="230-21-CV1" 
+            JumpToLabel="291-01-MA1" Canvas.Left="56" Canvas.Top="198"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="290-01-MA1" 
             JumpToLabel="320-01-MA1" Canvas.Left="1410" Canvas.Top="660"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-		VerticalAlignment="Center" 
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+		VerticalAlignment="Top" 
 		ComponentName="273-01-MA1" Canvas.Left="1350" Canvas.Top="341" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="269-01-MA1" Canvas.Left="1274" Canvas.Top="218" />
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="273-01-YA1" Canvas.Left="1350" Canvas.Top="396" />
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="273-01-YA1" Canvas.Left="1350" Canvas.Top="400" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="268-01-MA1" Canvas.Left="1235" Canvas.Top="135"/>
@@ -434,17 +415,5 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="268-21-CV1" Canvas.Left="1051" Canvas.Top="135"/>
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1294" Canvas.Top="273" HorizontalAlignment="Left" VerticalAlignment="Center" Width="50" Height="50" />
-        <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1080" Canvas.Top="665" Width="58" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Width="510" RenderTransformOrigin="0.5,0.5" StatusComponent="237-01-MA1" PipeHeight="Medium" Canvas.Left="765" Canvas.Top="327" HorizontalAlignment="Left" VerticalAlignment="Center" >
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
     </Canvas>
 </UserControl>
