--- a/Prevu.Synoptics.V3168_Sirplaste/P330.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P330.xaml
@@ -204,6 +204,7 @@
                 </TransformGroup>
             </Machines:CV_Valve.RenderTransform>
         </Machines:CV_Valve>
+        <Machines:V01_SLX_MixingSiloScrew Canvas.Left="11" Canvas.Top="250" Height="346" Width="264" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="226" Height="18" Canvas.Left="648" Canvas.Top="150" >
             <Machines:SCW_ScrewConveyor_straight.RenderTransform>
                 <TransformGroup>
@@ -214,7 +215,6 @@
                 </TransformGroup>
             </Machines:SCW_ScrewConveyor_straight.RenderTransform>
         </Machines:SCW_ScrewConveyor_straight>
-        <Machines:Storage_silo Height="346" Canvas.Left="11" Canvas.Top="250" Width="264" HorizontalAlignment="Left" VerticalAlignment="Center" />
         <Machines:Radar Height="46" Width="52" Canvas.Left="198" Canvas.Top="227" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:SCW_ScrewConveyor_straight Height="22" Width="159" Canvas.Left="130" Canvas.Top="664" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Canvas.Left="1325" Canvas.Top="553">
@@ -323,7 +323,7 @@
 		VerticalAlignment="Center" 
 		ComponentName="324-01-MA1" Canvas.Left="827" Canvas.Top="94"/>
         <Labels:DeviceLabel 
-      ComponentName="320-01-MA1" Canvas.Left="98" Canvas.Top="317" Height="55" Width="90" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+      ComponentName="320-01-MA1" Canvas.Left="98" Canvas.Top="236" Height="55" Width="90" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel 
       ComponentName="322-01-MA1" Canvas.Left="197" Canvas.Top="606" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Labels:DeviceLabel 
