--- a/Prevu.Synoptics.V3168_Sirplaste/PlantView.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/PlantView.xaml
@@ -14,7 +14,7 @@
               d:Background="{DynamicResource MaterialDesignPaper}">
     <Canvas Height="753" Width="3123">
         <Labels:Pipe Canvas.Left="1960" Canvas.Top="173" RenderTransformOrigin="0.5,0.5" Width="81" PipeHeight="Medium" StatusComponent="350-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:Pipe Canvas.Left="1912" Canvas.Top="222" RenderTransformOrigin="0.5,0.5" Width="106" PipeHeight="Medium" StatusComponent="350-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Center">
+        <Labels:Pipe Canvas.Left="1893" Canvas.Top="241" RenderTransformOrigin="0.5,0.5" Width="144" PipeHeight="Medium" StatusComponent="350-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -72,7 +72,7 @@
         </Labels:Pipe>
         <Labels:Pipe Canvas.Left="1062" Canvas.Top="167" Width="71" PipeHeight="Medium" StatusComponent="230-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="1552" Canvas.Top="185" Width="81" PipeHeight="Medium" StatusComponent="322-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Canvas.Left="1900" Canvas.Top="270" RenderTransformOrigin="0.5,0.5" Width="69" PipeHeight="Medium" StatusComponent="350-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Labels:Pipe Canvas.Left="1903" Canvas.Top="309" RenderTransformOrigin="0.5,0.5" Width="67" PipeHeight="Medium" StatusComponent="350-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
 
         <Labels:Pipe Canvas.Left="2679" Canvas.Top="303" Width="222" PipeHeight="Medium" StatusComponent="812-01-MA1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Labels:Pipe Canvas.Left="2429" Canvas.Top="170" Width="244" PipeHeight="Medium" StatusComponent="534-01-MA1" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -126,19 +126,8 @@
         <Machines:QX_HMI Height="82" Width="74" Canvas.Left="58" Canvas.Top="615" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="2150" Canvas.Top="587" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:QX_ShortElectricalCabinet Width="54" Height="64" Canvas.Left="68" Canvas.Top="257" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:GR_001 Height="166" Width="165" Canvas.Left="860" Canvas.Top="179" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Machines:STR_BatchReactor Height="137" Width="63" Canvas.Left="1644" Canvas.Top="123" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:STR_BatchReactor Height="138" Width="63" Canvas.Left="1618" Canvas.Top="156" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:DCE_DryingCentrifuge Height="112" Width="82" RenderTransformOrigin="0.5,0.5" Canvas.Left="1819" Canvas.Top="188" HorizontalAlignment="Center" VerticalAlignment="Top">
-            <Machines:DCE_DryingCentrifuge.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform AngleX="-0.005"/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DCE_DryingCentrifuge.RenderTransform>
-        </Machines:DCE_DryingCentrifuge>
         <Machines:QX_HMI Height="82" Width="74" Canvas.Left="58" Canvas.Top="428" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Separation:VSP_SeparationTank_wBottomScrew Height="145" Canvas.Left="2022" Canvas.Top="147" HorizontalAlignment="Left" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Width="194">
             <Separation:VSP_SeparationTank_wBottomScrew.RenderTransform>
@@ -150,29 +139,24 @@
                 </TransformGroup>
             </Separation:VSP_SeparationTank_wBottomScrew.RenderTransform>
         </Separation:VSP_SeparationTank_wBottomScrew>
-        <Machines:DCE_DryingCentrifuge Height="116" Width="94" RenderTransformOrigin="0.5,0.5" Canvas.Left="2355" Canvas.Top="164" HorizontalAlignment="Left" VerticalAlignment="Top">
-            <Machines:DCE_DryingCentrifuge.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform />
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DCE_DryingCentrifuge.RenderTransform>
-        </Machines:DCE_DryingCentrifuge>
-        <Machines:BBF_BigBagFilling Canvas.Left="2846" Canvas.Top="366" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="1538" Canvas.Top="587" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="2728" Canvas.Top="587" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="812" Canvas.Top="586" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Buffer_belt Height="96" Width="171" Canvas.Left="201" Canvas.Top="99" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:PR_Prerompitore Width="204" Height="208" Canvas.Left="286" Canvas.Top="203" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Separation:SA_Elutriator Canvas.Left="1122" Canvas.Top="162" HorizontalAlignment="Left" Height="127" VerticalAlignment="Center" Width="47"/>
-        <Separation:VSP_SeparationTank_wHopper Width="204" Canvas.Left="635" Canvas.Top="102" Height="192" HorizontalAlignment="Center" VerticalAlignment="Top" />
         <Machines:QX_LongElectricalCabinet Width="188" Height="76" Canvas.Left="250" Canvas.Top="587" RenderTransformOrigin="0.5,0.5" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VSP_SepTank_wHopper Canvas.Left="635" Canvas.Top="102" Height="192" Width="204" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_MU_Grinder Canvas.Left="860" Canvas.Top="179" Height="166" Width="165" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_SA_Elutriator Canvas.Left="1122" Canvas.Top="162" Height="127" Width="47" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_SLX_MixingSiloScrew Canvas.Left="1388" Canvas.Top="138" Height="196" Width="132" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_SLX_MixingSiloScrew Canvas.Left="2613" Canvas.Top="135" HorizontalAlignment="Center" VerticalAlignment="Top" Height="196" Width="132"/>
+        <Machines:V01_WCE_Centrifuge Canvas.Left="1801" Canvas.Top="213" Height="112" Width="119" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Machines:V01_DCE_Centrifuge Canvas.Left="2355" Canvas.Top="164" Height="116" Width="94" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_BBF_SingleBag Canvas.Left="2846" Canvas.Top="366" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="400"  Width="364" Canvas.Left="174" Canvas.Top="52" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="400"  Width="620" Canvas.Left="615" Canvas.Top="52" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="400"  Width="620" Canvas.Left="1320" Canvas.Top="52" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
-        <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="346"  Width="516" Canvas.Left="1986" Canvas.Top="120" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="346"  Width="516" Canvas.Left="1986" Canvas.Top="120" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <Rectangle Stroke="Black" RadiusX="15" RadiusY="15" StrokeThickness="3" StrokeDashArray="2 2" Height="387"  Width="452" Canvas.Left="2596" Canvas.Top="123" HorizontalAlignment="Center" VerticalAlignment="Top" d:IsLocked="True"/>
         <Labels:DeviceLabel x:Name="Q11" ComponentName="Q11" Canvas.Left="299" Canvas.Top="532" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel x:Name="Q41" ComponentName="Q41" Canvas.Left="860" Canvas.Top="532" HorizontalAlignment="Center" VerticalAlignment="Top"/>
@@ -197,10 +181,8 @@
         <Labels:GroupLabel GroupName="350" Canvas.Left="1825" Canvas.Top="145" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="210" Canvas.Left="685" Canvas.Top="300" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:GroupLabel GroupName="020" Canvas.Left="286" Canvas.Top="195" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:Storage_silo Canvas.Left="1388" Canvas.Top="138" Height="196" Width="132" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Machines:Storage_silo Canvas.Left="2613" Canvas.Top="135" Height="196" Width="132" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <Labels:ValueLabel Canvas.Left="1401" Canvas.Top="203" TrendName="LEVEL" ComponentName="320-41-LT1" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Center"/>
-        <Labels:ValueLabel Canvas.Left="2624" Canvas.Top="205" TrendName="WEIGHT" ComponentName="810-41-WT1" FontSize="16" HorizontalAlignment="Left" VerticalAlignment="Top"/>
+        <Labels:ValueLabel Canvas.Left="1401" Canvas.Top="188" TrendName="LEVEL" ComponentName="320-41-LT1" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:ValueLabel Canvas.Left="2624" Canvas.Top="190" TrendName="WEIGHT" ComponentName="810-41-WT1" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:ValueLabel Canvas.Left="400" Canvas.Top="225" TrendName="LEVEL" ComponentName="020-41-LT1" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
