--- a/Prevu.Synoptics.V3168_Sirplaste/D220.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/D220.xaml
@@ -10,26 +10,21 @@
              mc:Ignorable="d" 
              d:Background="{DynamicResource MaterialDesignPaper}" >
     <Canvas Height="287" Width="632">
-        <Separation:VSP_DETAIL_SeparationTank_wHopper Height="256" Canvas.Left="10" Canvas.Top="15" Width="610" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_VSP_DETAIL_SepTank_wHopper Canvas.Left="10" Canvas.Top="15" Height="256" Width="610" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-		Margin="15,81,0,0" 
 		VerticalAlignment="Top" 
-		ComponentName="220-01-MA1"/>
+		ComponentName="220-01-MA1" Canvas.Left="15" Canvas.Top="87"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="113,81,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="220-01-MA2"/>
+            ComponentName="220-01-MA2" Canvas.Left="113" Canvas.Top="87"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="212,81,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="220-01-MA3"/>
+            ComponentName="220-01-MA3" Canvas.Left="212" Canvas.Top="87"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="310,81,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="220-01-MA4"/>
+            ComponentName="220-01-MA4" Canvas.Left="310" Canvas.Top="87"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
-            Margin="410,81,0,0" 
             VerticalAlignment="Top" 
-            ComponentName="220-01-MA5"/>
+            ComponentName="220-01-MA5" Canvas.Left="410" Canvas.Top="87"/>
     </Canvas>
 </UserControl>
