--- a/Prevu.Synoptics.V3168_Sirplaste/P210.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P210.xaml
@@ -164,7 +164,6 @@
         </Labels:Pipe>
         <Machines:Waste HorizontalAlignment="Left"  VerticalAlignment="Center" Height="60" Width="62" Canvas.Left="536" Canvas.Top="571"/>
         <Machines:Waste HorizontalAlignment="Left"  VerticalAlignment="Center" Height="60" Width="62" Canvas.Left="958" Canvas.Top="660"/>
-        <Separation:VSP_SeparationTank_wHopper HorizontalAlignment="Left" Width="314" Canvas.Left="862" Canvas.Top="212" VerticalAlignment="Center" Height="300" />
         <Machines:CV_Valve HorizontalAlignment="Left"  VerticalAlignment="Center" Height="38" Width="50" Canvas.Left="418" Canvas.Top="280"/>
         <Machines:CV_Valve_001 HorizontalAlignment="Left" VerticalAlignment="Center" Color="Air" Height="68" Width="59" RenderTransformOrigin="0.5,0.5" Canvas.Left="1196" Canvas.Top="308" >
             <Machines:CV_Valve_001.RenderTransform>
@@ -176,17 +175,14 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
-        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left"  VerticalAlignment="Center" Height="22" Width="115" Canvas.Left="472" Canvas.Top="453"/>
-        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left"  VerticalAlignment="Center" Height="22" Width="115" Canvas.Left="472" Canvas.Top="523"/>
-        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left"  VerticalAlignment="Center" Height="22" Width="116" Canvas.Left="891" Canvas.Top="544"/>
-        <Machines:CV_ValvolaGhigliottina HorizontalAlignment="Left"  VerticalAlignment="Center" Height="22" Width="116" Canvas.Left="891" Canvas.Top="613"/>
+        <Machines:V01_VSP_SepTank_wHopper Canvas.Left="868" Canvas.Top="212" Height="300" Width="314" HorizontalAlignment="Left" VerticalAlignment="Center"/>
         <Stirrer:STR_PrewashReactor_wScrew HorizontalAlignment="Left" Width="200" Canvas.Left="469" Canvas.Top="169" VerticalAlignment="Center" Height="245" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="210-01-MA1" Canvas.Left="523" Canvas.Top="134"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
-            ComponentName="220-41-LT1" Canvas.Left="943" Canvas.Top="308" />
+            ComponentName="220-41-LT1" Canvas.Left="950" Canvas.Top="317" />
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="220-22-CV1" Canvas.Left="1019" Canvas.Top="530" />
@@ -228,7 +224,11 @@
             JumpFromLabel="220-24-CV1" 
             JumpToLabel="230-01-MA1" Canvas.Left="1295" Canvas.Top="221" />
         <Labels:JumpLabel 
-            JumpFromLabel="220-SEPARATION" 
+            JumpFromLabel="220-01-MA5" 
             JumpToLabel="225-41-LT1" Canvas.Left="1295" Canvas.Top="432" HorizontalAlignment="Center" VerticalAlignment="Top" />
+        <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="472" Canvas.Top="453" Height="22" Width="115" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="472" Canvas.Top="523" Height="22" Width="115" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="892" Canvas.Top="544" Height="22" Width="114" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_CV_ValvolaGhigliottina Canvas.Left="892" Canvas.Top="613" Height="22" Width="114" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
