--- a/Prevu.Synoptics.V3168_Sirplaste/P350.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P350.xaml
@@ -31,7 +31,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="96" RenderTransformOrigin="0.5,0.5" StatusComponent="376-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="838" Canvas.Top="224">
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="96" RenderTransformOrigin="0.5,0.5" StatusComponent="376-01-MA1" PipeHeight="Medium" Height="20" Canvas.Left="838" Canvas.Top="229">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -51,8 +51,8 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="98" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="792" Canvas.Top="185"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="225" StatusComponent="350-01-MA1" PipeHeight="Medium" Canvas.Left="441" Canvas.Top="187"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="98" StatusComponent="376-01-MA1" PipeHeight="Medium" Canvas.Left="792" Canvas.Top="191"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="192" StatusComponent="350-01-MA1" PipeHeight="Medium" Canvas.Left="441" Canvas.Top="208"/>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="318" RenderTransformOrigin="0.5,0.5" StatusComponent="380-01-MA1" Canvas.Left="665" Canvas.Top="531">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -74,7 +74,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Color="Water" Width="240" RenderTransformOrigin="0.5,0.5" StatusComponent="350-01-MA1" Canvas.Left="195" Canvas.Top="255">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="240" RenderTransformOrigin="0.5,0.5" StatusComponent="350-01-MA1" Canvas.Left="216" Canvas.Top="255">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -84,7 +84,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Center" Color="Water" Width="501" RenderTransformOrigin="0.5,0.5" StatusComponent="350-01-MA1" Canvas.Left="313" Canvas.Top="374">
+        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="476" RenderTransformOrigin="0.5,0.5" StatusComponent="350-01-MA1" Canvas.Left="334" Canvas.Top="374">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -126,7 +126,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="170" StatusComponent="331-01-MA1" PipeHeight="Medium" Height="10" Canvas.Left="136" Canvas.Top="73"/>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="170" StatusComponent="331-01-MA1" PipeHeight="Medium" Height="10" Canvas.Left="136" Canvas.Top="76"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="102" Color="Water" StatusComponent="377-01-MA1" RenderTransformOrigin="0.5,0.5" VisibilityComponent="377-21-CV1" Canvas.Left="1164" Canvas.Top="502">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -171,17 +171,7 @@
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="296" StatusComponent="373-01-MA1" VisibilitySignal="" VisibilityComponent="370-25-CV1" Canvas.Left="437" Canvas.Top="502"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="170" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="136" Canvas.Top="92"/>
-        <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" RenderTransformOrigin="0.5,0.5" Width="46" StatusComponent="350-01-MA1" PipeHeight="Medium" Height="10" Canvas.Left="427" Canvas.Top="168">
-            <Labels:Pipe.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Labels:Pipe.RenderTransform>
-        </Labels:Pipe>
+        <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="170" StatusComponent="336-01-MA1" PipeHeight="Medium" Canvas.Left="136" Canvas.Top="95"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="111" RenderTransformOrigin="0.5,0.5" StatusComponent="377-01-MA1" VisibilityComponent="377-21-CV1" Canvas.Left="834" Canvas.Top="497">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
@@ -275,7 +265,6 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Color="Water" Width="114" StatusComponent="373-01-MA1" Canvas.Left="286" Canvas.Top="502"/>
         <Labels:Pipe HorizontalAlignment="Left" VerticalAlignment="Center" Width="76" Color="Water" StatusComponent="377-01-MA1" VisibilityComponent="377-23-CV1" Canvas.Left="1308" Canvas.Top="511"/>
-        <Machines:SCW_ScrewConveyor_inclined HorizontalAlignment="Center" VerticalAlignment="Top" Height="212" Width="240" Canvas.Left="606" Canvas.Top="121"/>
         <Rectangle HorizontalAlignment="Left" Height="0" Stroke="Black" VerticalAlignment="Center" Width="50" Canvas.Left="985" Canvas.Top="510"/>
         <Rectangle HorizontalAlignment="Left" Height="35" Stroke="Black" VerticalAlignment="Center" Width="2" Canvas.Left="624" Canvas.Top="586"/>
         <Rectangle HorizontalAlignment="Left" Height="36" Stroke="Black" VerticalAlignment="Center" Width="2" RenderTransformOrigin="0.5,0.5" Canvas.Left="436" Canvas.Top="715">
@@ -350,30 +339,9 @@
                 </TransformGroup>
             </Machines:EXC_HeatExchanger.RenderTransform>
         </Machines:EXC_HeatExchanger>
-        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" VerticalAlignment="Center" Height="180" Width="150" RenderTransformOrigin="0.5,0.5" Canvas.Left="299" Canvas.Top="39">
-            <Machines:DCE_DryingCentrifuge.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="90"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DCE_DryingCentrifuge.RenderTransform>
-        </Machines:DCE_DryingCentrifuge>
-        <Machines:VB_VibratingScreen HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="931" Canvas.Top="469"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1226" Canvas.Top="130" HorizontalAlignment="Left" VerticalAlignment="Center" Width="60" Height="54"/>
         <HoldingTank:VRC_WaterTank Canvas.Left="656" Canvas.Top="676" HorizontalAlignment="Center" VerticalAlignment="Top"  ComponentName="370-41-LT1" TrendName="LEVEL" Height="135" Width="258" />
         <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Left" VerticalAlignment="Center" Canvas.Left="879" Canvas.Top="275"/>
-        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Left" VerticalAlignment="Center" Height="160" Width="128" RenderTransformOrigin="0.5,0.5" Canvas.Left="1010" Canvas.Top="142">
-            <Machines:DCE_DryingCentrifuge.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DCE_DryingCentrifuge.RenderTransform>
-        </Machines:DCE_DryingCentrifuge>
         <Machines:WaterPump HorizontalAlignment="Left" VerticalAlignment="Center" Height="70" Width="50" RenderTransformOrigin="0.5,0.5" Color="Water" Canvas.Left="1044" Canvas.Top="700">
             <Machines:WaterPump.RenderTransform>
                 <TransformGroup>
@@ -404,6 +372,10 @@
                 </TransformGroup>
             </Machines:CV_Valve_001.RenderTransform>
         </Machines:CV_Valve_001>
+        <Machines:V01_WCE_Centrifuge Canvas.Left="286" Canvas.Top="66" Height="153" Width="183" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_SCW_Screw_wHopper Canvas.Left="604" Canvas.Top="130" Height="197" Width="220"/>
+        <Machines:V01_DCE_Centrifuge Canvas.Left="1010" Canvas.Top="142" Height="160" Width="128" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VB_VibratingScreen Canvas.Left="931" Canvas.Top="469" Height="100" Width="100" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Machines:Waste HorizontalAlignment="Left" VerticalAlignment="Center" Height="46" Width="44" Canvas.Left="1038" Canvas.Top="488"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
@@ -426,9 +398,9 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="370-42-TT1" Canvas.Left="790" Canvas.Top="709"/>
-        <Labels:DeviceLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
-            ComponentName="350-01-MA1" Loaded="DeviceLabel_Loaded" Canvas.Left="473" Canvas.Top="60"/>
+        <Labels:DeviceLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
+            ComponentName="350-01-MA1" Loaded="DeviceLabel_Loaded" Canvas.Left="473" Canvas.Top="81"/>
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="370-41-LT1" Canvas.Left="688" Canvas.Top="709"/>
@@ -441,10 +413,10 @@
         <Labels:DeviceLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             ComponentName="377-23-CV1" Canvas.Left="1255" Canvas.Top="435"/>
-        <Labels:JumpLabel HorizontalAlignment="Left" 
-            VerticalAlignment="Center" 
+        <Labels:JumpLabel HorizontalAlignment="Center" 
+            VerticalAlignment="Top" 
             JumpFromLabel="350-01-MA1" 
-            JumpToLabel="331-01-MA1" Canvas.Left="106" Canvas.Top="52"/>
+            JumpToLabel="331-01-MA1" Canvas.Left="106" Canvas.Top="55"/>
         <Labels:JumpLabel HorizontalAlignment="Left" 
             VerticalAlignment="Center" 
             JumpFromLabel="354-HEAT" 
@@ -472,10 +444,10 @@
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="376-01-MA1" Loaded="DeviceLabel_Loaded" Canvas.Left="823" Canvas.Top="98"/>
-        <Labels:DeviceLabel HorizontalAlignment="Center" 
-            VerticalAlignment="Top" 
-            ComponentName="376-61-LEV" Loaded="DeviceLabel_Loaded" Canvas.Left="622" Canvas.Top="126"/>
-        <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="376-VIEW" DetailsPageName="D376" HideComponentName="True" Canvas.Left="716" Canvas.Top="126"/>
+        <Labels:DeviceLabel HorizontalAlignment="Left" 
+            VerticalAlignment="Center" 
+            ComponentName="376-61-LEV" Loaded="DeviceLabel_Loaded" Canvas.Left="592" Canvas.Top="144"/>
+        <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="376-VIEW" DetailsPageName="D376" HideComponentName="True" Canvas.Left="686" Canvas.Top="144"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="371-VIEW" DetailsPageName="D371" HideComponentName="True" Canvas.Left="617" Canvas.Top="404"/>
         <Labels:DetailsLabel HorizontalAlignment="Left" VerticalAlignment="Center" ComponentName="354-HEAT" DetailsPageName="D354" Canvas.Left="237" Canvas.Top="597"/>
         <Labels:DeviceLabel 
