--- a/Prevu.Synoptics.V3168_Sirplaste/P530.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P530.xaml
@@ -63,29 +63,10 @@
         </Labels:Pipe>
         <Labels:Pipe HorizontalAlignment="Center" VerticalAlignment="Top" Width="256" StatusComponent="534-01-MA1" PipeHeight="Medium" VisibilitySignal="" Canvas.Left="903" Canvas.Top="603"/>
         <Machines:DRY_HeatingBattery HorizontalAlignment="Left" VerticalAlignment="Center" Height="51" Width="52" Canvas.Left="740" Canvas.Top="581"/>
-        <Machines:DV_Diverter_T HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Canvas.Left="830" Canvas.Top="544">
-            <Machines:DV_Diverter_T.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DV_Diverter_T.RenderTransform>
-        </Machines:DV_Diverter_T>
-        <Machines:VS_Airlock HorizontalAlignment="Center" VerticalAlignment="Top" Height="72" Width="76" Canvas.Left="843" Canvas.Top="386"/>
-        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="447" Canvas.Top="367"/>
-        <Machines:DCE_DryingCentrifuge HorizontalAlignment="Center" VerticalAlignment="Top" Height="160" Width="128" RenderTransformOrigin="0.5,0.5" Canvas.Left="578" Canvas.Top="234">
-            <Machines:DCE_DryingCentrifuge.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="0"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DCE_DryingCentrifuge.RenderTransform>
-        </Machines:DCE_DryingCentrifuge>
+        <Machines:SCW_ScrewConveyor_straight HorizontalAlignment="Center" VerticalAlignment="Top" Canvas.Left="447" Canvas.Top="362"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="1011" Canvas.Top="583" Height="50" Width="54" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VS_Airlock Canvas.Left="843" Canvas.Top="386" Height="72" Width="76" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_DCE_Centrifuge Canvas.Left="578" Canvas.Top="234" Height="160" Width="128" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DeviceLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             ComponentName="534-01-MA1" Canvas.Left="993" Canvas.Top="640"/>
@@ -107,5 +88,6 @@
             VerticalAlignment="Top" 
             JumpFromLabel="534-01-MA1" 
             JumpToLabel="810-01-MA1" Canvas.Left="1136" Canvas.Top="574"/>
+        <Machines:V01_ScarpaTrasporto Canvas.Left="839" Canvas.Top="574" Height="43" Width="86" HorizontalAlignment="Left" VerticalAlignment="Center"/>
     </Canvas>
 </UserControl>
