--- a/Prevu.Synoptics.V3168_Sirplaste/P997.xaml
+++ b/Prevu.Synoptics.V3168_Sirplaste/P997.xaml
@@ -15,7 +15,7 @@
         <Labels:Pipe Width="366" StatusComponent="FKS-71-ECS8" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="775" Canvas.Top="220" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="363" StatusComponent="FKS-71-ECS6" PipeHeight="Medium" RenderTransformOrigin="0.5,0.5" Height="10" Canvas.Left="235" Canvas.Top="220" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:Pipe Width="72" Color="Air" RenderTransformOrigin="0.5,0.5" StatusComponent="970-01-MA1" Canvas.Left="1259" Canvas.Top="72" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Labels:Pipe Width="89" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" Height="24" Canvas.Left="1023" Canvas.Top="471" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="104" RenderTransformOrigin="0.5,0.5" StatusComponent="908-01-MA1" Height="24" Canvas.Left="1023" Canvas.Top="471" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -25,7 +25,7 @@
                 </TransformGroup>
             </Labels:Pipe.RenderTransform>
         </Labels:Pipe>
-        <Labels:Pipe Width="89" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" Height="24" Canvas.Left="573" Canvas.Top="471" Color="Air" HorizontalAlignment="Center" VerticalAlignment="Top">
+        <Labels:Pipe Width="100" RenderTransformOrigin="0.5,0.5" StatusComponent="898-01-MA1" Height="24" Canvas.Left="573" Canvas.Top="471" Color="Air" HorizontalAlignment="Left" VerticalAlignment="Center">
             <Labels:Pipe.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform/>
@@ -240,48 +240,19 @@
         <TextBlock HorizontalAlignment="Center" TextWrapping="Wrap" 
             VerticalAlignment="Top" Height="30" Width="170" TextAlignment="Center" 
             FontSize="20" Foreground="White" Text="{lex:Loc FLAKES SORTING}" Canvas.Left="602" Canvas.Top="141"/>
-        <Machines:DV_Diverter_T HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="80" Canvas.Left="189" Canvas.Top="431">
-            <Machines:DV_Diverter_T.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DV_Diverter_T.RenderTransform>
-        </Machines:DV_Diverter_T>
-        <Machines:DV_Diverter_T HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="80" Canvas.Left="637" Canvas.Top="431">
-            <Machines:DV_Diverter_T.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DV_Diverter_T.RenderTransform>
-        </Machines:DV_Diverter_T>
-        <Machines:DV_Diverter_T HorizontalAlignment="Center" VerticalAlignment="Top" RenderTransformOrigin="0.5,0.5" Height="80" Canvas.Left="1086" Canvas.Top="431">
-            <Machines:DV_Diverter_T.RenderTransform>
-                <TransformGroup>
-                    <ScaleTransform/>
-                    <SkewTransform/>
-                    <RotateTransform Angle="180"/>
-                    <TranslateTransform/>
-                </TransformGroup>
-            </Machines:DV_Diverter_T.RenderTransform>
-        </Machines:DV_Diverter_T>
-        <Machines:VS_Airlock HorizontalAlignment="Center" VerticalAlignment="Top" Height="60" Width="64" Canvas.Left="208" Canvas.Top="371"/>
-        <Machines:VS_Airlock HorizontalAlignment="Center" VerticalAlignment="Top" Height="60" Width="64" Canvas.Left="655" Canvas.Top="371"/>
-        <Machines:VS_Airlock HorizontalAlignment="Center" VerticalAlignment="Top" Height="60" Width="64" Canvas.Left="1104" Canvas.Top="371"/>
-        <Valves:DV_BigBagDiverter_V2 Height="86" Canvas.Left="259" Canvas.Top="508" Width="157" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Valves:DV_BigBagDiverter_V2 Height="86" Canvas.Left="704" Canvas.Top="508" Width="157" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Valves:DV_BigBagDiverter_V2 Height="86" Canvas.Left="1145" Canvas.Top="508" Width="157" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <BigBag:BBF_DoubleBigBagFilling Canvas.Left="641" Canvas.Top="625" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <BigBag:BBF_DoubleBigBagFilling Canvas.Left="196" Canvas.Top="625" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <BigBag:BBF_DoubleBigBagFilling Canvas.Left="1082" Canvas.Top="625" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="102" Canvas.Top="457" Height="52" Width="48" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="543" Canvas.Top="457" Height="52" Width="48" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Blowers:VT_CMM_BlowerAirCompressor Canvas.Left="993" Canvas.Top="457" Height="52" Width="48" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_EC_FiltroManiche Canvas.Left="1318" Canvas.Top="55" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_VS_Airlock Canvas.Left="208" Canvas.Top="371" Height="60" Width="64" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_VS_Airlock Canvas.Left="655" Canvas.Top="371" Height="60" Width="64" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_ScarpaTrasporto Canvas.Left="208" Canvas.Top="453" Height="39" Width="67" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_ScarpaTrasporto Canvas.Left="657" Canvas.Top="453" Height="39" Width="67" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_ScarpaTrasporto Canvas.Left="1106" Canvas.Top="453" Height="39" Width="67" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+        <Machines:V01_VS_Airlock Canvas.Left="1104" Canvas.Top="371" Height="60" Width="64" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_BBF_DoubleBag Canvas.Left="196" Canvas.Top="625" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_BBF_DoubleBag Canvas.Left="641" Canvas.Top="625" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_BBF_DoubleBag Canvas.Left="1082" Canvas.Top="625" Height="166" Width="286" HorizontalAlignment="Center" VerticalAlignment="Center"/>
         <Labels:JumpLabel HorizontalAlignment="Center" 
             VerticalAlignment="Top" 
             JumpFromLabel="FKS-71-ECS1" 
@@ -327,8 +298,7 @@
         <Labels:DetailsLabel ComponentName="998-BAGS" DetailsPageName="D998" Canvas.Left="758" Canvas.Top="679" HorizontalAlignment="Center" VerticalAlignment="Top"/>
         <Labels:DetailsLabel HorizontalAlignment="Center" VerticalAlignment="Top" ComponentName="997-BAGS" DetailsPageName="D997" Canvas.Left="313" Canvas.Top="679"/>
         <Labels:DetailsLabel ComponentName="999-BAGS" DetailsPageName="D999" Canvas.Left="1199" Canvas.Top="679" HorizontalAlignment="Center" VerticalAlignment="Top"/>
-        <Machines:EC_Filtro Height="129" Canvas.Left="1305" Canvas.Top="60" Width="119" HorizontalAlignment="Center" VerticalAlignment="Top" />
-        <Labels:DetailsLabel ComponentName="970-FILTER" DetailsPageName="D970" Canvas.Left="1418" Canvas.Top="139" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Labels:DetailsLabel ComponentName="970-FILTER" DetailsPageName="D970" Canvas.Left="1425" Canvas.Top="130" HorizontalAlignment="Left" VerticalAlignment="Top"/>
         <Machines:MaterialInletOutlet Canvas.Left="1215" Canvas.Top="41" HorizontalAlignment="Center" VerticalAlignment="Top" Height="67" Width="67"/>
         <TextBlock TextWrapping="Wrap" 
             Height="66" Width="122" TextAlignment="Center" 
@@ -344,5 +314,8 @@
         <TextBlock TextWrapping="Wrap" 
             Height="30" Width="286" TextAlignment="Center" 
             FontSize="20" Foreground="White" Text="{lex:Loc COLOR}" Canvas.Left="642" Canvas.Top="798" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="256" Canvas.Top="501" Height="93" Width="164" HorizontalAlignment="Center" VerticalAlignment="Center"/>
+        <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="700" Canvas.Top="504" Height="94" Width="164" HorizontalAlignment="Center" VerticalAlignment="Top"/>
+        <Machines:V01_DV_DoubleBagsDiverter Canvas.Left="1142" Canvas.Top="504" Height="94" Width="164" HorizontalAlignment="Center" VerticalAlignment="Top"/>
     </Canvas>
 </UserControl>
